# school-for-github

./: README.md
CSCD 260 - Architecture & Organization/: HW 3 copy.asm  HW 3.rtf  Homework-3-1.txt  Lab0.vl  a.out  b_sort_data.txt  bubbleSort.asm  interruptProgram1 copy.asm  interruptProgram1.asm  recurrsion assignment  recurrsion assignment.asm  taskswitchtest.asm
CSCD 320 Algorithms 2/HW 1/: BinarySearchTree.java  Tester.java  hw1answers.pages
CSCD 320 Algorithms 2/HW2/: hw2_1.docx
CSCD 320 Algorithms 2/final study pics/: IMG_0624.HEIC  IMG_2866.HEIC  IMG_3176.HEIC  IMG_5299.HEIC  IMG_6883.HEIC  IMG_7563.HEIC  IMG_9892.HEIC  Union Find Java class
CSCD 350 Software Developement/Task_1/: Task1.docx  Task1_primaryElements.pages  cs350-task-1.csv  cs350-task-1.numbers  cs350-task-1.xls
CSCD 350 Software Developement/team/: Command_breakdown.xlsx  cs350-task-TE 2.pages  cs350-task-TE.doc  testerCode.txt
CSCD 378 Web Dev/: List_example.html  helloWorld.html  test.php
CSCD 437 Secure Coding/: welgej3.pages  welgejs4.docx
CSCD_327_Relational_Database_Systems/: query2.sql  query3.sql
CSCD_445_GPU/hw1_work/240_Lab16_LinkedList/: CMakeLists.txt  Makefile  cscd240Lab16.c  lab16
CSCD_445_GPU/hw1_work/240_Lab16_LinkedList/input/: words.txt
CSCD_445_GPU/hw1_work/240_Lab16_LinkedList/linkedList/: linkedList.c  linkedList.h  requiredIncludes.h
CSCD_445_GPU/hw1_work/240_Lab16_LinkedList/listUtils/: listUtils.c  listUtils.h
CSCD_445_GPU/hw1_work/240_Lab16_LinkedList/utils/: utils.c
CSCD_445_GPU/hw1_work/240_Lab16_LinkedList/words/: word.c
(+266 files in other folders)
